--- a/src/app/admin/dashboard/dashboard.html
+++ b/src/app/admin/dashboard/dashboard.html
@@ -7,6 +7,13 @@
     
     <div class="card-header">Global User Management</div>
     <div class="card-body">
+      <hr>
+      <h5 class="mt-3">Create New User</h5>
+      <form #createUserForm="ngForm" (ngSubmit)="superAdminCreateUser()" class="d-flex align-items-center">
+        <input type="text" class="form-control" [(ngModel)]="newUsername" name="newUsername" placeholder="Enter username..." required>
+        <input type="email" class="form-control ms-2" [(ngModel)]="newUserEmail" name="newUserEmail" placeholder="Enter email..." required>
+        <button type="submit" class="btn btn-primary ms-2" [disabled]="!createUserForm.form.valid">Create</button>
+      </form>
       <table class="table">
         <thead>
           <tr>
@@ -86,6 +93,7 @@
         <button (click)="removeGroup(group.id)" class="btn btn-danger btn-sm">Delete This Group</button>
       </div>
       <div class="card-body">
+
         <h5>Channels</h5>
         <ul class="list-group mb-3">
           <li *ngFor="let channel of getChannelsForGroup(group.id)" class="list-group-item d-flex justify-content-between align-items-center">
@@ -105,7 +113,31 @@
             <button *ngIf="user.id !== group.createdBy" (click)="removeUserFromGroup(user.id, group.id)" class="btn btn-outline-danger btn-sm">Remove from Group</button>
           </li>
         </ul>
+        <form #addToChannelForm="ngForm" 
+              (ngSubmit)="addUserToChannel(addToChannelForm.value.selectedUser, addToChannelForm.value.selectedChannel)"
+              class="d-flex mt-3 align-items-center">
+
+            <label class="me-2">Add Member:</label>
+            <select name="selectedUser" ngModel class="form-select form-select-sm" required>
+                <option [ngValue]="null" disabled>Select user...</option>
+                <option *ngFor="let user of getUsersInGroup(group.id)" [value]="user.id">
+                    {{ user.username }}
+                </option>
+            </select>
+
+            <label class="mx-2">to Channel:</label>
+            <select name="selectedChannel" ngModel class="form-select form-select-sm" required>
+                <option [ngValue]="null" disabled>Select channel...</option>
+                <option *ngFor="let channel of getChannelsForGroup(group.id)" [value]="channel.id">
+                    #{{ channel.name }}
+                </option>
+            </select>
+
+            <button type="submit" class="btn btn-primary btn-sm ms-2" [disabled]="!addToChannelForm.form.valid">Add</button>
+        </form>
         <hr>
+
+        
         <h5 class="mt-3">Manage Admins</h5>
         <ul class="list-group mb-3">
           <li *ngFor="let adminId of group.admins" class="list-group-item">
@@ -134,6 +166,7 @@
           </div>
      </li>
     </ul>
+    
     <h5 class="mt-3">Add New Member</h5>
   <form #addMemberForm="ngForm" (ngSubmit)="addMember(addMemberForm.value.selectedUser, group.id)" class="d-flex mt-3">
     <select name="selectedUser" ngModel class="form-control">
